Turned character art <div> into <figure> & caption <p> into <figcaption>

--- a/html/ancient.html
+++ b/html/ancient.html
@@ -126,10 +126,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="遠呂智蛇揺雨">
-                  <p class="caption">揺雨</p>
-                </div>
+                  <figcaption class="caption">揺雨</figcaption>
+                </figure>
                 <p>八つ頭の大蛇の童子</p>
                 <p>
                   遠呂智　蛇　揺雨（おろちのへびのゆるさめ）<br>
@@ -178,10 +178,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="平也醒上丸">
-                  <p class="caption">上丸</p>
-                </div>
+                  <figcaption class="caption">上丸</figcaption>
+                </figure>
                 <p><ruby>平妖刀<rt>たいらのようとう</rt></ruby></p>
                 <p>
                   平　也醒　上丸（たいらのやさめのかみまる）<br>
@@ -233,10 +233,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="夜叉町鐵奈我沙">
-                  <p class="caption">奈我沙</p>
-                </div>
+                  <figcaption class="caption">奈我沙</figcaption>
+                </figure>
                 <p>
                   夜叉町　鐵　奈我沙（やしゃまちのくろがねのながさ）<br>
                   Yashamachi no Kurogane no Nagasa
@@ -290,10 +290,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="一条久二乃良宗">
-                  <p class="caption">乃良宗</p>
-                </div>
+                  <figcaption class="caption">乃良宗</figcaption>
+                </figure>
                 <p>
                   一条　久二　乃良宗（いちじょうのくにののらむね）<br>
                   Ichijo no Kuni no Noramune
@@ -341,10 +341,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="二条清八太郎">
-                  <p class="caption">八太郎</p>
-                </div>
+                  <figcaption class="caption">八太郎</figcaption>
+                </figure>
                 <p>
                   二条　清　八太郎（にじょうのきよのやたろう）<br>
                   Nijo no Kiyo no Yataro
@@ -392,10 +392,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="三條麹丸雨">
-                  <p class="caption">丸雨</p>
-                </div>
+                  <figcaption class="caption">丸雨</figcaption>
+                </figure>
                 <p>
                   三條　麹　丸雨（さんじょうのこうじのまるさめ）<br>
                   Sanjo no Kouji no Marusame
@@ -443,10 +443,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="源蜘彩歌子">
-                  <p class="caption">彩歌子</p>
-                </div>
+                  <figcaption class="caption">彩歌子</figcaption>
+                </figure>
                 <p>
                   源　蜘　彩歌子（みなもとのくものあやかし）<br>
                   Minamoto no Kumo no Ayakashi
@@ -494,10 +494,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="平榊間美智">
-                  <p class="caption">美智</p>
-                </div>
+                  <figcaption class="caption">美智</figcaption>
+                </figure>
                 <p>
                   平　榊間　美智（たいらのさかまのよしとも）<br>
                   Taira no Sakama no Yoshitomo
@@ -545,10 +545,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="藤原裁峰義">
-                  <p class="caption">峰義</p>
-                </div>
+                  <figcaption class="caption">峰義</figcaption>
+                </figure>
                 <p>
                   藤原　裁　峰義（ふじわらのさいのみねよし）<br>
                   Fujiwara no Sai no Mineyoshi
@@ -596,10 +596,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="橘藪根岸仁">
-                  <p class="caption">岸仁</p>
-                </div>
+                  <figcaption class="caption">岸仁</figcaption>
+                </figure>
                 <p>
                   橘　藪根　岸仁（たちばなのやぶねのきしひと）<br>
                   Tachibana no Yabune no Kishihito
@@ -647,10 +647,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="物部鑓殺奈">
-                  <p class="caption">殺奈</p>
-                </div>
+                  <figcaption class="caption">殺奈</figcaption>
+                </figure>
                 <p>
                   物部　鑓　殺奈（もののべのやりのせつな）<br>
                   Mononobe no Yari no Setsuna
@@ -698,10 +698,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="九条纖本盛">
-                  <p class="caption">本盛</p>
-                </div>
+                  <figcaption class="caption">本盛</figcaption>
+                </figure>
                 <p>
                   九条　纖　本盛（くじょうのしなのもともり）<br>
                   Kujo no Shina no Motomori
@@ -749,10 +749,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="蘇我牀遣仁">
-                  <p class="caption">遣仁</p>
-                </div>
+                  <figcaption class="caption">遣仁</figcaption>
+                </figure>
                 <p>
                   蘇我　牀　遣仁（そがのゆかのやるひと）<br>
                   Soga no Yuka no Yaruhito
@@ -800,10 +800,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="足利畔蒜毬二">
-                  <p class="caption">毬二</p>
-                </div>
+                  <figcaption class="caption">毬二</figcaption>
+                </figure>
                 <p>
                   足利　畔蒜　毬二（あしかがのくろねのまりじ）<br>
                   Ashikaga no Kurone no Mariji
@@ -851,10 +851,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="鷹司闇光之郞">
-                  <p class="caption">光之郞</p>
-                </div>
+                  <figcaption class="caption">光之郞</figcaption>
+                </figure>
                 <p>
                   鷹司　闇　光之郞（たかつかさのやみのみつのろう）<br>
                   Takatsukasa no Yami no Mitsunoro
@@ -902,10 +902,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="德川衣世探重">
-                  <p class="caption">探重</p>
-                </div>
+                  <figcaption class="caption">探重</figcaption>
+                </figure>
                 <p>
                   德川　衣世　探重（とくがわのいよのさがししげ）<br>
                   Tokugawa no Iyo no Sagashishige
@@ -953,10 +953,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="大炊御門鈴鵜麻">
-                  <p class="caption">鵜麻</p>
-                </div>
+                  <figcaption class="caption">鵜麻</figcaption>
+                </figure>
                 <p>
                   大炊御門　鈴　鵜麻（おおいのみかどのすずのうま）<br>
                   Oinomikado no Suzu no Uma
@@ -1004,10 +1004,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="西園寺綯清宗">
-                  <p class="caption">清宗</p>
-                </div>
+                  <figcaption class="caption">清宗</figcaption>
+                </figure>
                 <p>
                   西園寺　綯　清宗（さいおんじのなうのきよむね）<br>
                   Saionji no Nau no Kiyomune
@@ -1055,10 +1055,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="醍醐猿概">
-                  <p class="caption">概</p>
-                </div>
+                  <figcaption class="caption">概</figcaption>
+                </figure>
                 <p>
                   醍醐　猿　概（だいごのさるのおおむね）<br>
                   Daigo no Saru no Omune
@@ -1106,10 +1106,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="今出川裙兔雪丸">
-                  <p class="caption">雪丸</p>
-                </div>
+                  <figcaption class="caption">雪丸</figcaption>
+                </figure>
                 <p>
                   今出川　裙兔　雪丸（いまでがわのぐんとのせつまる）<br>
                   Imadegawa no Gunto no Setsumaru
@@ -1157,10 +1157,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="德大寺誇宗沙">
-                  <p class="caption">宗沙</p>
-                </div>
+                  <figcaption class="caption">宗沙</figcaption>
+                </figure>
                 <p>
                   德大寺　誇　宗沙（とくだいじのほこるのむねさ）<br>
                   Tokudaiji no Hokoru no Munesa
@@ -1208,10 +1208,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="近衛鞠染鮫">
-                  <p class="caption">染鮫</p>
-                </div>
+                  <figcaption class="caption">染鮫</figcaption>
+                </figure>
                 <p>
                   近衛　鞠　染鮫（このえのまりのそめざめ）<br>
                   Konoe no Mari no Somezame
@@ -1259,10 +1259,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="菊亭馬海春盛">
-                  <p class="caption">春盛</p>
-                </div>
+                  <figcaption class="caption">春盛</figcaption>
+                </figure>
                 <p>
                   菊亭　馬海　春盛（きくていのうまかいのはるもり）<br>
                   Kikutei no Umakai no Harumori
@@ -1310,10 +1310,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="花山院墨染花清">
-                  <p class="caption">花清</p>
-                </div>
+                  <figcaption class="caption">花清</figcaption>
+                </figure>
                 <p>
                   花山院　墨染　花清（かさんのいんのすみぞめのはなのきよ）<br>
                   Kasannoin no Sumizome no Hananokiyo
@@ -1361,10 +1361,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="遊坂茜志奴呂">
-                  <p class="caption">志奴呂</p>
-                </div>
+                  <figcaption class="caption">志奴呂</figcaption>
+                </figure>
                 <p>狐の様に帝王</p>
                 <p>
                   遊坂　茜　志奴呂（ゆうざかのあかねのしぬろ）<br>
