--- a/html/boss.html
+++ b/html/boss.html
@@ -75,10 +75,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="崎鳥サーンプリヤ">
-                  <p class="caption">サーンプリヤ</p>
-                </div>
+                  <figcaption class="caption">サーンプリヤ</figcaption>
+                </figure>
                 <p>空の嬢</p>
                 <p>
                   崎鳥　サーンプリヤ（さきどり　サーンプリヤ）<br>
@@ -164,10 +164,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="テオニムフィ・アポストロプールー">
-                  <p class="caption">テオニムフィ</p>
-                </div>
+                  <figcaption class="caption">テオニムフィ</figcaption>
+                </figure>
                 <p>迷宮の主人</p>
                 <p>
                   テオニムフィ・アポストロプールー<br>
