--- a/html/bunoden.html
+++ b/html/bunoden.html
@@ -66,10 +66,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="アルクスニス・アリギルトス">
-                <p class="caption">アリギルトス</p>
-              </div>
+                <figcaption class="caption">アリギルトス</figcaption>
+              </figure>
               <p>智識の瞳</p>
               <p>
                 アルクスニス・アリギルトス<br>
@@ -116,10 +116,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="アルクスネ・キェルスタ">
-                <p class="caption">キェルスタ</p>
-              </div>
+                <figcaption class="caption">キェルスタ</figcaption>
+              </figure>
               <p>後悔の瞳</p>
               <p>
                 アルクスネ・キェルスタ<br>
@@ -166,10 +166,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="アルクスネ・クリメンティーナ">
-                <p class="caption">クリメンティーナ</p>
-              </div>
+                <figcaption class="caption">クリメンティーナ</figcaption>
+              </figure>
               <p>性欲の瞳</p>
               <p>
                 アルクスネ・クリメンティーナ<br>
@@ -216,10 +216,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="アルクスネ・リーリヤ">
-                <p class="caption">リーリヤ</p>
-              </div>
+                <figcaption class="caption">リーリヤ</figcaption>
+              </figure>
               <p>感情の瞳</p>
               <p>
                 アルクスネ・リーリヤ<br>
