--- a/html/flame_dragon.html
+++ b/html/flame_dragon.html
@@ -138,10 +138,10 @@
                       </div>
                       <br>
                     </div>
-                    <div class="art-chara">
+                    <figure class="art-chara">
                       <img class="art" src="../img/fill.png" alt="閻魔塚沙々夢">
-                      <p class="caption">沙々夢</p>
-                    </div>
+                      <figcaption class="caption">沙々夢</figcaption>
+                    </figure>
                     <p>天狗の姫</p>
                     <p>
                       本名：閻魔塚　沙々夢（えんまづか　ささむ）　Enmazuka Sasamu<br>
@@ -190,10 +190,10 @@
                       </div>
                       <br>
                     </div>
-                    <div class="art-chara">
+                    <figure class="art-chara">
                       <img class="art" src="../img/fill.png" alt="いけはたハミ">
-                      <p class="caption">ハミ</p>
-                    </div>
+                      <figcaption class="caption">ハミ</figcaption>
+                    </figure>
                     <p>
                       いけはた　ハミ<br>
                       Ikehata Hami
@@ -238,10 +238,10 @@
                       </div>
                       <br>
                     </div>
-                    <div class="art-chara">
+                    <figure class="art-chara">
                       <img class="art" src="../img/fill.png" alt="ルンドゥプ・カリングポング・ルンドルプ・キドトドパ">
-                      <p class="caption">ルンドゥプ</p>
-                    </div>
+                      <figcaption class="caption">ルンドゥプ</figcaption>
+                    </figure>
                     <p>
                       ルンドゥプ・カリングポング・ルンドルプ・キドトドパ<br>
                       Lhundup Kalingpong Lhundrup Kyidtodpa
@@ -287,10 +287,10 @@
                       </div>
                       <br>
                     </div>
-                    <div class="art-chara">
+                    <figure class="art-chara">
                       <img class="art" src="../img/fill.png" alt="三ツ木姫娘">
-                      <p class="caption">姫娘</p>
-                    </div>
+                      <figcaption class="caption">姫娘</figcaption>
+                    </figure>
                     <p>
                       三ツ木　姫娘（みつぎ　ひめこ）<br>
                       Mitsugi Himeko
@@ -335,10 +335,10 @@
                       </div>
                       <br>
                     </div>
-                    <div class="art-chara">
+                    <figure class="art-chara">
                       <img class="art" src="../img/fill.png" alt="築野居あや">
-                      <p class="caption">あや</p>
-                    </div>
+                      <figcaption class="caption">あや</figcaption>
+                    </figure>
                     <p>
                       築野居　あや（つのゐ　あや）<br>
                       Tsunowi Aya
@@ -390,10 +390,10 @@
                       </div>
                       <br>
                     </div>
-                    <div class="art-chara">
+                    <figure class="art-chara">
                       <img class="art" src="../img/fill.png" alt="氷見英子">
-                      <p class="caption">英子</p>
-                    </div>
+                      <figcaption class="caption">英子</figcaption>
+                    </figure>
                     <p>
                       氷見　英子（ひみ　ひでこ）<br>
                       Himi Hideko
@@ -438,10 +438,10 @@
                       </div>
                       <br>
                     </div>
-                    <div class="art-chara">
+                    <figure class="art-chara">
                       <img class="art" src="../img/fill.png" alt="烏ヶ原ころーねー">
-                      <p class="caption">ころーねー</p>
-                    </div>
+                      <figcaption class="caption">ころーねー</figcaption>
+                    </figure>
                     <p>
                       烏ヶ原　ころーねー（からすがはら　ころーねー）<br>
                       Karasugahara Korone
@@ -487,10 +487,10 @@
                       </div>
                       <br>
                     </div>
-                    <div class="art-chara">
+                    <figure class="art-chara">
                       <img class="art" src="../img/fill.png" alt="蜘蛛沙羅禁如">
-                      <p class="caption">禁如</p>
-                    </div>
+                      <figcaption class="caption">禁如</figcaption>
+                    </figure>
                     <p>病気洞窟のクモ女郎</p>
                     <p>
                       蜘蛛沙羅　禁如（くもさら　きんにょ）<br>
@@ -539,10 +539,10 @@
                       </div>
                       <br>
                     </div>
-                    <div class="art-chara">
+                    <figure class="art-chara">
                       <img class="art" src="../img/fill.png" alt="森涅壽美子">
-                      <p class="caption">壽美子</p>
-                    </div>
+                      <figcaption class="caption">壽美子</figcaption>
+                    </figure>
                     <p>
                       森涅　壽美子（もりね　きみこ）<br>
                       Morine Kimiko
@@ -587,10 +587,10 @@
                       </div>
                       <br>
                     </div>
-                    <div class="art-chara">
+                    <figure class="art-chara">
                       <img class="art" src="../img/fill.png" alt="兎仏嘉田宝鈴">
-                      <p class="caption">宝鈴</p>
-                    </div>
+                      <figcaption class="caption">宝鈴</figcaption>
+                    </figure>
                     <p>
                       兎仏嘉田　宝鈴（うぶかた　ほうすず）<br>
                       Ubukata Housuzu
@@ -642,10 +642,10 @@
                       </div>
                       <br>
                     </div>
-                    <div class="art-chara">
+                    <figure class="art-chara">
                       <img class="art" src="../img/fill.png" alt="久求十阿奈香">
-                      <p class="caption">阿奈香</p>
-                    </div>
+                      <figcaption class="caption">阿奈香</figcaption>
+                    </figure>
                     <p>
                       久求十　阿奈香（ひさきゅうと　あなか）<br>
                       Hisakyuuto Anaka
@@ -690,10 +690,10 @@
                       </div>
                       <br>
                     </div>
-                    <div class="art-chara">
+                    <figure class="art-chara">
                       <img class="art" src="../img/fill.png" alt="錐ヶ宮ルーメン乃">
-                      <p class="caption">ルーメン乃</p>
-                    </div>
+                      <figcaption class="caption">ルーメン乃</figcaption>
+                    </figure>
                     <p>パチンコを愛する賭博神</p>
                     <p>
                       錐ヶ宮　ルーメン乃（きりがみや　ルーメンの）<br>
@@ -744,10 +744,10 @@
                       </div>
                       <br>
                     </div>
-                    <div class="art-chara">
+                    <figure class="art-chara">
                       <img class="art" src="../img/fill.png" alt="又橋早千恵">
-                      <p class="caption">早千恵</p>
-                    </div>
+                      <figcaption class="caption">早千恵</figcaption>
+                    </figure>
                     <p>
                       又橋　早千恵（またはし　さちえ）<br>
                       Matahashi Sachie
@@ -792,10 +792,10 @@
                       </div>
                       <br>
                     </div>
-                    <div class="art-chara">
+                    <figure class="art-chara">
                       <img class="art" src="../img/fill.png" alt="ソウマ魎呼">
-                      <p class="caption">魎呼</p>
-                    </div>
+                      <figcaption class="caption">魎呼</figcaption>
+                    </figure>
                     <p>
                       ソウマ　魎呼（ソウマ　りょうこ）<br>
                       Soma Ryoko
@@ -840,10 +840,10 @@
                       </div>
                       <br>
                     </div>
-                    <div class="art-chara">
+                    <figure class="art-chara">
                       <img class="art" src="../img/fill.png" alt="厄史丸純子">
-                      <p class="caption">純子</p>
-                    </div>
+                      <figcaption class="caption">純子</figcaption>
+                    </figure>
                     <p>
                       厄史丸　純子（やくしまる　じゅんこ）<br>
                       Yakushimaru Junko
@@ -1037,10 +1037,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="理姫丸一姫">
-                  <p class="caption">一姫</p>
-                </div>
+                  <figcaption class="caption">一姫</figcaption>
+                </figure>
                 <p>
                   理姫丸　一姫（りきまる　かずひめ）<br>
                   Rikimaru Kazuhime
@@ -1086,10 +1086,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="毘沙門天">
-                  <p class="caption">毘沙門天</p>
-                </div>
+                  <figcaption class="caption">毘沙門天</figcaption>
+                </figure>
                 <p>
                   毘沙門天（ヴァイシュラヴァナ）<br>
                   Lord Bishamonten
@@ -1134,10 +1134,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="大野二姫">
-                  <p class="caption">二姫</p>
-                </div>
+                  <figcaption class="caption">二姫</figcaption>
+                </figure>
                 <p>
                   大野　二姫（おおの　じひめ）<br>
                   Ono Jihime
@@ -1183,10 +1183,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="増長天">
-                  <p class="caption">増長天</p>
-                </div>
+                  <figcaption class="caption">増長天</figcaption>
+                </figure>
                 <p>
                   増長天（ヴィルーダカ）<br>
                   Lord Zouchouten
@@ -1231,10 +1231,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="雪村三姫">
-                  <p class="caption">三姫</p>
-                </div>
+                  <figcaption class="caption">三姫</figcaption>
+                </figure>
                 <p>
                   雪村　三姫（ゆきむら　みき）<br>
                   Yukimura Miki
@@ -1280,10 +1280,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="持国天">
-                  <p class="caption">持国天</p>
-                </div>
+                  <figcaption class="caption">持国天</figcaption>
+                </figure>
                 <p>
                   持国天（ドゥリタラーシュトラ）<br>
                   Lord Jikokuten
@@ -1328,10 +1328,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="古澤四姫">
-                  <p class="caption">四姫</p>
-                </div>
+                  <figcaption class="caption">四姫</figcaption>
+                </figure>
                 <p>
                   古澤　四姫（ふるさわ　しき）<br>
                   Furusawa Shiki
@@ -1377,10 +1377,10 @@
                   </div>
                   <br>
                 </div>
-                <div class="art-chara">
+                <figure class="art-chara">
                   <img class="art" src="../img/fill.png" alt="広目天">
-                  <p class="caption">広目天</p>
-                </div>
+                  <figcaption class="caption">広目天</figcaption>
+                </figure>
                 <p>
                   広目天（ヴィルーパーシャ）<br>
                   Lord Koumokuten
