--- a/html/nizi.html
+++ b/html/nizi.html
@@ -100,10 +100,10 @@
                     </div>
                   </div>
                 </div>
-                <div id="SatokiNijikawaArt" class="art-chara">
+                <figure id="SatokiNijikawaArt" class="art-chara">
                   <img class="art" src="../img/art/虹川郷鬼.png" alt="郷鬼（PC-98）">
-                  <p class="caption">PC-98のアート</p>
-                </div>
+                  <figcaption class="caption">PC-98のアート</figcaption>
+                </figure>
                 <p>奈落から細やかな鬼ちゃん</p>
                 <p>
                   虹川　郷鬼（にじかわ　さとき）<br>
@@ -187,10 +187,10 @@
                     </div>
                   </div>
                 </div>
-                <div id="wamoArt" class="art-chara">
+                <figure id="wamoArt" class="art-chara">
                   <img class="art" src="../img/art/ワーモ.png" alt="ワーモ（PC-98）">
-                  <p class="caption">PC-98のアート</p>
-                </div>
+                  <figcaption class="caption">PC-98のアート</figcaption>
+                </figure>
                 <p>半種保護者</p>
                 <p>
                   ワーモ<br>
@@ -261,10 +261,10 @@
                     </div>
                   </div>
                 </div>
-                <div id="kiyoiArt" class="art-chara">
+                <figure id="kiyoiArt" class="art-chara">
                   <img class="art" src="../img/art/清.png" alt="清（PC-98）">
-                  <p class="caption">PC-98のアート</p>
-                </div>
+                  <figcaption class="caption">PC-98のアート</figcaption>
+                </figure>
                 <p>情の深い天狗ちゃん</p>
                 <p>
                   清（きよい）<br>
@@ -351,10 +351,10 @@
                     </div>
                   </div>
                 </div>
-                <div id="youkoArt" class="art-chara">
+                <figure id="youkoArt" class="art-chara">
                   <img class="art" src="../img/fill.png" alt="妖狐">
-                  <p class="caption">妖狐</p>
-                </div>
+                  <figcaption class="caption">妖狐</figcaption>
+                </figure>
                 <p>
                   妖狐（ようこ）<br>
                   Youko
@@ -414,10 +414,10 @@
                     </div>
                   </div>
                 </div>
-                <div id="animusArt" class="art-chara">
+                <figure id="animusArt" class="art-chara">
                   <img class="art" src="../img/fill.png" alt="アニムス">
-                  <p class="caption">アニムス</p>
-                </div>
+                  <figcaption class="caption">アニムス</figcaption>
+                </figure>
                 <p>
                   製品の名前：A10000-ANIMUS（エイいちまん－アニムス）<br>
                   人間のような名前：アニムス　Animus
@@ -469,10 +469,10 @@
                     </div>
                   </div>
                 </div>
-                <div id="AynArt" class="art-chara">
+                <figure id="AynArt" class="art-chara">
                   <img class="art" src="../img/art/アイン.png" alt="アイン">
-                  <p class="caption">アイン</p>
-                </div>
+                  <figcaption class="caption">アイン</figcaption>
+                </figure>
                 <p>
                   アイン<br>
                   'Ayn
@@ -521,10 +521,10 @@
                     </div>
                   </div>
                 </div>
-                <div id="bolormaaArt" class="art-chara">
+                <figure id="bolormaaArt" class="art-chara">
                   <img class="art" src="../img/art/ボルルマー.png" alt="ボルルマー">
-                  <p class="caption">ボルルマー</p>
-                </div>
+                  <figcaption class="caption">ボルルマー</figcaption>
+                </figure>
                 <p>
                   ボルルマー<br>
                   Bolormaa
@@ -616,10 +616,10 @@
                     </div>
                   </div>
                 </div>
-                <div id="CuowuArt" class="art-chara">
+                <figure id="CuowuArt" class="art-chara">
                   <img class="art" src="../img/art/錯誤.png" alt="錯誤">
-                  <p class="caption">錯誤</p>
-                </div>
+                  <figcaption class="caption">錯誤</figcaption>
+                </figure>
                 <p>
                   錯誤（さくご）<br>
                   Cuowu
@@ -727,10 +727,10 @@
                     </div>
                   </div>
                 </div>
-                <div id="HapP_EmoshunArt" class="art-chara">
+                <figure id="HapP_EmoshunArt" class="art-chara">
                   <img class="art" style="width: 192px" src="../img/art/ハップ・Ｐ・エモ＝ション.png" alt="ハップ">
-                  <p class="caption">ハップ</p>
-                </div>
+                  <figcaption class="caption">ハップ</figcaption>
+                </figure>
                 <p>感情を色に変わる神様</p>
                 <p>
                   ハップ・Ｐ・エモ＝ション<br>
@@ -790,10 +790,10 @@
                     </div>
                   </div>
                 </div>
-                <div id="idolaArt" class="art-chara">
+                <figure id="idolaArt" class="art-chara">
                   <img class="art" src="../img/fill.png" alt="イドラ">
-                  <p class="caption">イドラ</p>
-                </div>
+                  <figcaption class="caption">イドラ</figcaption>
+                </figure>
                 <p>
                   製品の名前：IDOLA-0C1D（イドラ－ゼロシーいちディー）<br>
                   人間のような名前：イドラ　Idola
@@ -864,10 +864,10 @@
                     </div>
                   </div>
                 </div>
-                <div id="ElisabedKhidirbegishviliGarsevanishviliPirtskhalaishviliArt" class="art-chara">
+                <figure id="ElisabedKhidirbegishviliGarsevanishviliPirtskhalaishviliArt" class="art-chara">
                   <img class="art" src="../img/fill.png" alt="エリサベト">
-                  <p class="caption">エリサベト</p>
-                </div>
+                  <figcaption class="caption">エリサベト</figcaption>
+                </figure>
                 <p>
                   エリサベト・ヒディルベギシュヴィリ＝ガルセヴァニシュヴィリ＝ピルツハライシュヴィリ<br>
                   Elisabed Khidirbegishvili-Garsevanishvili-Pirtskhalaishvili
@@ -920,10 +920,10 @@
                     </div>
                   </div>
                 </div>
-                <div id="OlhaYukhymivnaLytvynaKostyuchenkoArt" class="art-chara">
+                <figure id="OlhaYukhymivnaLytvynaKostyuchenkoArt" class="art-chara">
                   <img class="art" src="../img/fill.png" alt="オルハ">
-                  <p class="caption">オルハ</p>
-                </div>
+                  <figcaption class="caption">オルハ</figcaption>
+                </figure>
                 <p>八苦の幽霊リボン</p>
                 <p>
                   オルハ・ユヒミウナ・リトウィナ＝コスチュチェンコ<br>
@@ -977,10 +977,10 @@
                     </div>
                   </div>
                 </div>
-                <div id="MaengSongHeeArt" class="art-chara">
+                <figure id="MaengSongHeeArt" class="art-chara">
                   <img class="art" src="../img/fill.png" alt="聖姫">
-                  <p class="caption">聖姫</p>
-                </div>
+                  <figcaption class="caption">聖姫</figcaption>
+                </figure>
                 <p>東方風の刀</p>
                 <p>
                   孟　聖姫（メン・ソンヒ）<br>
@@ -1034,10 +1034,10 @@
                     </div>
                   </div>
                 </div>
-                <div id="KishihimeNuwesakaArt" class="art-chara">
+                <figure id="KishihimeNuwesakaArt" class="art-chara">
                   <img class="art" src="../img/art/ぬゑさか岸姫.png" alt="岸姫">
-                  <p class="caption">岸姫</p>
-                </div>
+                  <figcaption class="caption">岸姫</figcaption>
+                </figure>
                 <p>真型がない大魔書</p>
                 <p>
                   ぬゑさか　岸姫（ぬゑさか　きしひめ）<br>
@@ -1090,10 +1090,10 @@
                     </div>
                   </div>
                 </div>
-                <div id="IlyinishnaMakarovnaObraztsovaSluchevskayaArt" class="art-chara">
+                <figure id="IlyinishnaMakarovnaObraztsovaSluchevskayaArt" class="art-chara">
                   <img class="art" src="../img/fill.png" alt="イリィ">
-                  <p class="caption">イリィ</p>
-                </div>
+                  <figcaption class="caption">イリィ</figcaption>
+                </figure>
                 <p>
                   イリニシュナ・マカロフナ・オブラズツォファ＝スルチェフスカヤ<br>
                   Ilyinishna Makarovna Obraztsova-Sluchevskaya
@@ -1146,10 +1146,10 @@
                     </div>
                   </div>
                 </div>
-                <div id="SandaKhaingTheingiHtetArt" class="art-chara">
+                <figure id="SandaKhaingTheingiHtetArt" class="art-chara">
                   <img class="art" src="../img/fill.png" alt="サンダ">
-                  <p class="caption">サンダ</p>
-                </div>
+                  <figcaption class="caption">サンダ</figcaption>
+                </figure>
                 <p>
                   サンダ・カイン・テインギ・テ<br>
                   Sanda Khaing Theingi Htet
@@ -1202,10 +1202,10 @@
                     </div>
                   </div>
                 </div>
-                <div id="ScarlettWilliamsArt" class="art-chara">
+                <figure id="ScarlettWilliamsArt" class="art-chara">
                   <img class="art" src="../img/fill.png" alt="スカーレット">
-                  <p class="caption">スカーレット</p>
-                </div>
+                  <figcaption class="caption">スカーレット</figcaption>
+                </figure>
                 <p>
                   スカーレット・ウィリアムズ<br>
                   Scarlett Williams
