--- a/html/obsidianrat.html
+++ b/html/obsidianrat.html
@@ -62,12 +62,22 @@
                 </div>
               </div>
             </div>
-            <br>
+            <!-- インターセックス（Intersex） -->
+            <div class="container">
+              <a href="https://lgbtqia.fandom.com/wiki/Intersex" title="インターセックス" target="_blank">
+                <img class="pride-flag image" src="../img/pride/Intersex.png" alt="インターセックス" title="インターセックス（Intersex）">
+              </a>
+              <div class="middle">
+                <div class="text">
+                  インターセックス
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="art-chara">
+          <figure class="art-chara">
             <img class="art" src="../img/fill.png" alt="ライラック・ブラザーウィック">
-            <p class="caption">ライラック</p>
-          </div>
+            <figcaption class="caption">ライラック</figcaption>
+          </figure>
           <p>神秘的な風の歌の囲い女</p>
           <p>
             ライラック・ブラザーウィック<br>
@@ -78,7 +88,7 @@
             能力：宇宙操作の能力
           </p>
           <p>
-            性別：<br>
+            性別：インターセックス（ターナー症候群）<br>
             性自認：アストラムジェンダー<br>
             代名詞：彼女／<ruby>奴<rt>コム</rt></ruby>（she/com）　（※）<br>
             雌雄性：
@@ -130,10 +140,10 @@
             </div>
             <br>
           </div>
-          <div class="art-chara">
+          <figure class="art-chara">
             <img class="art" src="../img/fill.png" alt="ハービー・チャッドボーン">
-            <p class="caption">ハービー</p>
-          </div>
+            <figcaption class="caption">ハービー</figcaption>
+          </figure>
           <p>執念深い風の王様</p>
           <p>
             ハービー・チャッドボーン<br>
@@ -217,10 +227,10 @@
               </div>
             </div>
           </div>
-          <div class="art-chara">
+          <figure class="art-chara">
             <img class="art" src="../img/fill.png" alt="ヴィルヘルミナ・ベットガー・エーレンライヒ">
-            <p class="caption">ヴィルヘルミナ</p>
-          </div>
+            <figcaption class="caption">ヴィルヘルミナ</figcaption>
+          </figure>
           <p><ruby>地獄の王様<rt>ヘーレンケーニグ</rt></ruby></p>
           <p>
             ヴィルヘルミナ・ベットガー・エーレンライヒ<br>
@@ -282,10 +292,10 @@
             </div>
             <br>
           </div>
-          <div class="art-chara">
+          <figure class="art-chara">
             <img class="art" src="../img/fill.png" alt="藤井襟">
-            <p class="caption">襟</p>
-          </div>
+            <figcaption class="caption">襟</figcaption>
+          </figure>
           <p>真夜の黒き翼</p>
           <p>
             藤井　襟（ふじい　えり）<br>
@@ -330,10 +340,10 @@
             </div>
             <br>
           </div>
-          <div class="art-chara">
+          <figure class="art-chara">
             <img class="art" src="../img/fill.png" alt="岸本龍志">
-            <p class="caption">龍志</p>
-          </div>
+            <figcaption class="caption">龍志</figcaption>
+          </figure>
           <p>コマ犬の金色獅子滅悪魔者</p>
           <p>
             岸本　龍志（きしもと　たっし）<br>
@@ -378,10 +388,10 @@
             </div>
             <br>
           </div>
-          <div class="art-chara">
+          <figure class="art-chara">
             <img class="art" src="../img/fill.png" alt="リビェナ・クリージョヴァー＝マハーチュコヴァー">
-            <p class="caption">リビェナ</p>
-          </div>
+            <figcaption class="caption">リビェナ</figcaption>
+          </figure>
           <p>大臣の忠実な犬少女</p>
           <p>
             リビェナ・クリージョヴァー＝マハーチュコヴァー<br>
@@ -426,10 +436,10 @@
             </div>
             <br>
           </div>
-          <div class="art-chara">
+          <figure class="art-chara">
             <img class="art" src="../img/fill.png" alt="工藤伊紀">
-            <p class="caption">伊紀</p>
-          </div>
+            <figcaption class="caption">伊紀</figcaption>
+          </figure>
           <p>混乱した過激派</p>
           <p>
             工藤　伊紀（くどう　いき）<br>
@@ -463,10 +473,10 @@
         <button class="accordion">崎本朝次郎</button>
         <div class="panel containment-unit">
           <h2 id="Choujirou_Sakimoto">崎本朝次郎</h2>
-          <div class="art-chara">
+          <figure class="art-chara">
             <img class="art" src="../img/fill.png" alt="崎本朝次郎">
-            <p class="caption">朝次郎</p>
-          </div>
+            <figcaption class="caption">朝次郎</figcaption>
+          </figure>
           <div class="pride">
             <p class="pronouns">代名詞：he/him</p>
           </div>
@@ -539,10 +549,10 @@
             </div>
             <br>
           </div>
-          <div class="art-chara">
+          <figure class="art-chara">
             <img class="art" src="../img/fill.png" alt="ラインハルト・シッケンダンツ">
-            <p class="caption">ラインハルト</p>
-          </div>
+            <figcaption class="caption">ラインハルト</figcaption>
+          </figure>
           <p>
             ラインハルト・シッケンダンツ<br>
             <span lang="de" title="German text">Reinhard Schickendantz</span>
@@ -586,10 +596,10 @@
             </div>
             <br>
           </div>
-          <div class="art-chara">
+          <figure class="art-chara">
             <img class="art" src="../img/fill.png" alt="臭鼬悟狸">
-            <p class="caption">悟狸</p>
-          </div>
+            <figcaption class="caption">悟狸</figcaption>
+          </figure>
           <p>
             愛称：臭鼬　悟狸（しゅうゆう　さとり）　Shuuyuu Satori<br>
             本名：臭鼬　悟貍（チョウヨウ・ウリ）　Chouyou Wuli
@@ -637,10 +647,10 @@
             </div>
             <br>
           </div>
-          <div class="art-chara">
+          <figure class="art-chara">
             <img class="art" src="../img/fill.png" alt="橘純夫">
-            <p class="caption">純夫</p>
-          </div>
+            <figcaption class="caption">純夫</figcaption>
+          </figure>
           <p>
             橘　純夫（たちばな　すみお）<br>
             Tachibana Sumio
@@ -683,10 +693,10 @@
             </div>
             <br>
           </div>
-          <div class="art-chara">
+          <figure class="art-chara">
             <img class="art" src="../img/fill.png" alt="竹乃家締丸">
-            <p class="caption">締丸</p>
-          </div>
+            <figcaption class="caption">締丸</figcaption>
+          </figure>
           <p>
             竹乃家　締丸（たけのや　しめまる）<br>
             Takenoya Shimemaru
