--- a/html/qarya_al-arnabu.html
+++ b/html/qarya_al-arnabu.html
@@ -101,10 +101,10 @@
                   </div>
                 </div>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="アラ">
-                <p class="caption">アラ</p>
-              </div>
+                <figcaption class="caption">アラ</figcaption>
+              </figure>
               <p>ウサギの女神</p>
               <p>
                 アラ<br>
@@ -153,10 +153,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="ガーリバ・アルクアドリー">
-                <p class="caption">ガーリバ</p>
-              </div>
+                <figcaption class="caption">ガーリバ</figcaption>
+              </figure>
               <p>神を恐れるウサギ</p>
               <p>
                 全名：ガーリバ・イブナトジャファル・イブンアマーヌラ・イブンファラジャラ・イブンアフィーフ・イブンムサッディーク・イブンイッザッディーン・イブンムタンマン・イルアブディルラハマン<br>
@@ -207,10 +207,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="ザーフィル・イブンムタスィル・アルアビード">
-                <p class="caption">ザーフィル</p>
-              </div>
+                <figcaption class="caption">ザーフィル</figcaption>
+              </figure>
               <p>
                 ザーフィル・イブンムタスィル・アルアビード<br>
                 Dhaafir ibn Mutasir al-'Abeed
@@ -257,10 +257,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="ヒクマ・イブナトジハード・アルアルシャド">
-                <p class="caption">ヒクマ</p>
-              </div>
+                <figcaption class="caption">ヒクマ</figcaption>
+              </figure>
               <p>
                 ヒクマ・イブナトジハード・アルアルシャド<br>
                 Hikma bint Jihaad al-Arshad
@@ -307,10 +307,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="シャフィーカ・アルバルチ">
-                <p class="caption">シャフィーカ</p>
-              </div>
+                <figcaption class="caption">シャフィーカ</figcaption>
+              </figure>
               <p>
                 シャフィーカ・アルバルチ<br>
                 Shafeeqa al-Baluch
@@ -357,10 +357,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="マスウーダ・イドダルウィシュ">
-                <p class="caption">マスウーダ</p>
-              </div>
+                <figcaption class="caption">マスウーダ</figcaption>
+              </figure>
               <p>
                 マスウーダ・イブナトジュマイル・イドダルウィシュ<br>
                 Mas'ooda bint Jumail ed-Darwish
@@ -407,10 +407,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="タマンナ・イルガッファリ">
-                <p class="caption">タマンナ</p>
-              </div>
+                <figcaption class="caption">タマンナ</figcaption>
+              </figure>
               <p>
                 タマンナ・イルガッファリ<br>
                 Tamanna il-Ghaffari
@@ -457,10 +457,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="ムアーイド・イブンナーシルッディーン・イルハニフ">
-                <p class="caption">ムアーイド</p>
-              </div>
+                <figcaption class="caption">ムアーイド</figcaption>
+              </figure>
               <p>
                 ムアーイド・イブンナーシルッディーン・イルハニフ<br>
                 Muaaid ibn Naasiruddeen el-Hanif
@@ -507,10 +507,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="サービカ・アルフッサイン">
-                <p class="caption">サービカ</p>
-              </div>
+                <figcaption class="caption">サービカ</figcaption>
+              </figure>
               <p>
                 サービカ・アルフッサイン<br>
                 Saabiqa al-Hussain
@@ -557,10 +557,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="シャファーア・イブナトハリーファハ・イルイスラーム">
-                <p class="caption">シャファーア</p>
-              </div>
+                <figcaption class="caption">シャファーア</figcaption>
+              </figure>
               <p>
                 シャファーア・イブナトハリーファハ・イルイスラーム<br>
                 Shafaa'a bint Khaleefah el-Islam
@@ -607,10 +607,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="イッファト＝ジュハイナ・イルイスマイル">
-                <p class="caption">イッファト＝ジュハイナ</p>
-              </div>
+                <figcaption class="caption">イッファト＝ジュハイナ</figcaption>
+              </figure>
               <p>
                 イッファト＝ジュハイナ・イルイスマイル<br>
                 Iffat-Juhaina il-Ismail
@@ -657,10 +657,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="イルハム・ジャッバラ">
-                <p class="caption">イルハム</p>
-              </div>
+                <figcaption class="caption">イルハム</figcaption>
+              </figure>
               <p>
                 全名：イルハム・イブナトムスアブ・イブンワジーハ・イブンヒルミー・イブンカイユーム・イブンムハンマド・イブンムタンマム・アルジャッバル<br>
                 Ilham bint Mus'ab ibn Wajeeh ibn Hilmi ibn Qayyoom ibn Muhammad ibn Mutammam al-Jabbar<br>
@@ -710,10 +710,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="リフア・アルジャマイル">
-                <p class="caption">リフア</p>
-              </div>
+                <figcaption class="caption">リフア</figcaption>
+              </figure>
               <p>
                 リフア・アルジャマイル<br>
                 Rif'a al-Jamail
@@ -760,10 +760,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="カムラ・アルハラフ">
-                <p class="caption">カムラ</p>
-              </div>
+                <figcaption class="caption">カムラ</figcaption>
+              </figure>
               <p>
                 カムラ・アルハラフ<br>
                 Qamra al-Khalaf
@@ -810,10 +810,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="アブドゥス・サラム・イブンイハーブ・アルモガッダム">
-                <p class="caption">アブドゥス・サラム</p>
-              </div>
+                <figcaption class="caption">アブドゥス・サラム</figcaption>
+              </figure>
               <p>
                 アブドゥス・サラム・イブンイハーブ・アルモガッダム<br>
                 Abdus Salam ibn Ihaab al-Moghaddam
@@ -860,10 +860,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="アブドゥル・イブラヒム・イルラスル">
-                <p class="caption">アブドゥル</p>
-              </div>
+                <figcaption class="caption">アブドゥル</figcaption>
+              </figure>
               <p>
                 アブドゥル・イブラヒム・イルラスル<br>
                 Abdur Ibrahim ir-Rasul
@@ -910,10 +910,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="イシャーク・アスサード">
-                <p class="caption">イシャーク</p>
-              </div>
+                <figcaption class="caption">イシャーク</figcaption>
+              </figure>
               <p>
                 イシャーク・アスサード<br>
                 Ishaaq as-Saad
@@ -960,10 +960,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="ファトヒヤー・イブナトアッバード・イスサラフッディン">
-                <p class="caption">ファトヒヤー</p>
-              </div>
+                <figcaption class="caption">ファトヒヤー</figcaption>
+              </figure>
               <p>
                 ファトヒヤー・イブナトアッバード・イスサラフッディン<br>
                 Fat'hiyaa bint Abbaad es-Salahuddin
@@ -1010,10 +1010,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="タージュッディーン・イブンヒラール・アスサラハ">
-                <p class="caption">タージュッディーン</p>
-              </div>
+                <figcaption class="caption">タージュッディーン</figcaption>
+              </figure>
               <p>
                 タージュッディーン・イブンヒラール・アスサラハ<br>
                 Taajuddeen ibn Hilaal as-Sarah
@@ -1060,10 +1060,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="ヤクーブ・イブンラビーブ・アススルタニー">
-                <p class="caption">ヤクーブ</p>
-              </div>
+                <figcaption class="caption">ヤクーブ</figcaption>
+              </figure>
               <p>
                 ヤクーブ・イブンラビーブ・アススルタニー<br>
                 Ya'qoob ibn Labeeb as-Soltani
@@ -1110,10 +1110,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="ワディーアーラ・イブナトハーシム・アトタバタバイ">
-                <p class="caption">ワディーアーラ</p>
-              </div>
+                <figcaption class="caption">ワディーアーラ</figcaption>
+              </figure>
               <p>
                 ワディーアーラ・イブナトハーシム・アトタバタバイ<br>
                 Wadee'ala bint Haashim at-Tabatabai
@@ -1160,10 +1160,10 @@
                 </div>
                 <br>
               </div>
-              <div class="art-chara">
+              <figure class="art-chara">
                 <img class="art" src="../img/fill.png" alt="シュクリヤ・イルウトマン">
-                <p class="caption">シュクリヤ</p>
-              </div>
+                <figcaption class="caption">シュクリヤ</figcaption>
+              </figure>
               <p>
                 シュクリヤ・イルウトマン<br>
                 Shukriyya il-Uthman
