--- a/html/hikigahara.html
+++ b/html/hikigahara.html
@@ -66,10 +66,10 @@
               </div>
               <br>
             </div>
-            <div class="art-chara">
+            <figure class="art-chara">
               <img class="art" src="../img/fill.png" alt="朴茶々丸">
-              <p class="caption">茶々丸</p>
-            </div>
+              <figcaption class="caption">茶々丸</figcaption>
+            </figure>
             <p>希望を破る森のジーディヤオ</p>
             <p>
               朴　茶々丸（ぱく　ちゃちゃまる）<br>
